--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,3 +1,5 @@
-<footer class="mod-pageFooter"><div class="mod-pageFooterInner">
-	<small>© 2012 東京Node学園祭 実行委員会 | <a href="#">Node.js 日本ユーザグループ</a></small>
-</div></footer>
+<footer class="mod-pageFooter">
+	<div class="mod-pageFooter-inner">
+		<small>© 2012 東京Node学園祭 実行委員会 | <a href="#">Node.js 日本ユーザグループ</a></small>
+	</div>
+<!-- /.mod-pageFooter --></footer>
