--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -20,4 +20,4 @@
 			<li><a href="#"><img src="assets/img/mod-pageHeader/nav_06_n.png" alt="ticket" width="430" height="52"></a></li>
 		</ul>
 	</nav>
-</header>
+<!-- /.mod-pageHeader --></header>
