--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -14,7 +14,7 @@ body{
 }
 
 a{
-	color:#6b9f00;
+	color:#6b9e00;
 	&:hover{
 		text-decoration: none;
 	}
@@ -49,7 +49,7 @@ a{
 		}
 	}
 	.mod-pageHeader-text{
-		color:#b3ff50;
+		color:#fff32d;
 		font-size:font-size(14);
 		font-weight: bold;
 		line-height: 1.4;
@@ -90,6 +90,10 @@ a{
 		a{
 			display: block;
 			width:100%;
+			@include transition(margin, .1s, linear);
+			&:hover{
+				margin-left:-6px;
+			}
 		}
 		img{
 			display:block;
@@ -105,15 +109,16 @@ a{
 	@extend %zindex;
 	@extend %clearfix;
 	clear: both;
-	width:970px;
+	width:950px;
 	margin:0 auto;
+	padding:0 5px;
 	.mod-pageBody-main{
 		float:left;
-		width:610px;
+		width:620px;
 	}
 	.mod-pageBody-side{
 		float: right;
-		width:630px;
+		width:310px;
 	}
 }
 
@@ -122,14 +127,22 @@ a{
    ========================================================================== */
 .mod-pageFooter{
 	@extend %zindex;
+	color:#d2d8ba;
 	clear: both;
-	width:970px;
-	padding:0 0 90px;
-	margin:20px auto 0;
+	margin-top:20px;
+	background:#46483e;
+	.mod-pageFooter-inner{
+		width:970px;
+		padding:20px 0;
+		margin:0 auto;
+	}
 	small{
 		font-size:font-size(12);
 		text-align: center;
 		display: block;
+	}
+	a{
+		color:#8cc84b;
 	}
 }
 
@@ -139,19 +152,34 @@ a{
    mod-section / mod-subSection
    ========================================================================== */
 %mod-section{
-	padding: 15px 15px 15px 40px;
+	padding: 30px;
 	margin:0 0 20px;
-	background:rgba(255,255,255,.87);
+	background:rgba(255,255,247,.87);
+	background:url(../img/mod-section/bg_01_top.png) no-repeat, url(../img/mod-section/bg_01_btm.png) no-repeat 0 100%;
+	position:relative;
+	z-index:2;
+	&:before{
+		content:'';
+		position:absolute;
+		z-index:-1;
+		top:28px;
+		bottom:28px;
+		right:0;
+		left:0;
+		display:block;
+		background:rgba(255,255,247,.87);
+	}
 	p{
 		margin:0 0 1em;
 	}
 }
 %mod-section-header{
 	display: table;
-	width:100%;
-	margin:0 0 1em -30px;
+	position:relative;
+	width:620px;
+	margin:-24px -30px 1em -30px;
 	h1{
-		font-size:font-size(24);
+		font-size:100%;
 		vertical-align: middle;
 		display: table-cell;
 		*display:inline;
@@ -176,6 +204,10 @@ a{
 	@extend %mod-section;
 	.mod-section-header{
 		@extend %mod-section-header;
+		color:#32351d;
+		h1{
+			font-size:font-size(30);
+		}
 	}
 	.mod-section-eyecatch{
 		@extend %mod-section-eyecatch;
@@ -187,10 +219,10 @@ a{
 	@extend %mod-section;
 	font-size:font-size(12);
 	.mod-subSection-header{
-		color:#546c22;
 		@extend %mod-section-header;
+		color:#46483e;
 		h1{
-			font-size:font-size(18);
+			font-size:font-size(22, 12);
 		}
 	}
 	.mod-subSection-eyecatch{
@@ -199,17 +231,7 @@ a{
 	}
 }
 
-//  /* extra case... */
-//  .mod-pageBody-side{
-//  	.mod-section,
-//  	.mod-subSection{
-//  		padding-left:30px;
-//  	}
-//  	.mod-section-header,
-//  	.mod-subSection-header{
-//  		margin-left:-20px;
-//  	}
-//  }
+
 
 
 /* ==========================================================================
@@ -252,43 +274,106 @@ a{
 		left:0;
 		img{
 			display: block;
-			border:3px solid #546c22;
 		}
 	}
 }
 
-
+/* ==========================================================================
+   mod-newsList
+   ========================================================================== */
+.mod-newsList{
+	ul{
+		margin:0;
+		padding:0;
+		list-style:none;
+	}
+	li{
+		margin:0 0 .3em;
+		padding:0;
+	}
+	span{
+		color:#546c22;
+		font-weight:bold;
+		display:block;
+	}
+}
 
 /* ==========================================================================
    mod-sponsors
    ========================================================================== */
 .mod-sponsors{
-	.mod-sponsors-label{
-		font-weight: bold;
-		margin:0 0 0.8em;
-		padding:1px 0 1px 18px;
-		background: url(../img/mod-sponsors/ico_01.png) no-repeat 0 46%;
+	padding:30px 20px;
+	margin:0 0 20px;
+	background:url(../img/mod-sponsors/bg_01_top.png) no-repeat, url(../img/mod-sponsors/bg_01_btm.png) no-repeat 0 100%;
+	position:relative;
+	z-index:2;
+	&:before{
+		content:'';
+		display:block;
+		position:absolute;
+		z-index:-1;
+		left:0;
+		right:0;
+		top:22px;
+		bottom:22px;
+		background:#fff;
 	}
-	ul{
-		@extend %clearfix;
-		margin:0 0 1em;
-		padding:0 0 1em;
-		list-style: none;
-		border-bottom:1px solid #d6dac9;
-		&:last-child{
-			border-bottom:none;
-			margin-bottom:0;
+	&:after{}
+	.mod-sponsors-header{
+		display: table;
+		width:310px;
+		margin:-20px -20px 10px;
+		h1{
+			font-size:100%;
+			vertical-align: middle;
+			display: table-cell;
+			*display:inline;
+			*zoom:1;
+			margin:0;
 		}
 	}
-	li{
-		float:left;
-		margin:0 25px 0 0;
-		padding:0;
+	.mod-sponsors-eyecatch{
+		vertical-align: middle;
+		display: table-cell;
+		*display:inline;
+		*zoom:1;
+		width:1%;
+		padding:0 15px 0 0;
+		img{
+			display: block;
+		}
 	}
-	img{
-		display:block;
+	h2{
+		font-size:font-size(14);
+		padding:2px 0 2px 30px;
+		background:url(../img/mod-sponsors/ico_01.png) no-repeat 0 48%;
+	}
+	ul{
+		padding:0;
+		margin:0;
+		list-style:none;
+	}
+	li{
+		padding:0;
+		margin: 0 0 20px;
+		img{
+			display:block;
+			margin:0 auto;
+		}
 	}
 }
+
+/* ==========================================================================
+   mod-twitterWedget
+   ========================================================================== */
+.mod-twitterWedget{
+	background:#fff;
+	padding:10px;
+	.mod-twitterWedget-timeline{
+		margin:0 0 10px;
+	}
+}
+
 /* ==========================================================================
    mod-avatar
    ========================================================================== */
@@ -341,7 +426,3 @@ a{
 		// h70 * w40
 	}
 }
-/* ==========================================================================
-   mod-table
-   ========================================================================== */
-
