--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -26,7 +26,13 @@
 
 <div class="mod-avatar" style="top:150px; left:20%;">
 	<div class="mod-avatar-comment">はろーわーるど</div>
-	<img src="assets/img/mod-avatar/img_01.png" width="40" height="70">
+	<img src="assets/img/mod-avatar/girl01.gif" height="80" width="45">
+</div>
+
+
+<div class="mod-avatar ex-avatar-me" style="top:300px; left:10%;">
+	<div class="mod-avatar-comment">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+	<img src="assets/img/mod-avatar/boy01me.gif" height="80" width="45">
 </div>
 
 </body>
