--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 <link rel="stylesheet" href="assets/css/style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+<script src="assets/js/lib.js"></script>
 <script src="assets/js/script.js"></script>
 </head>
 <body>
@@ -13,7 +13,9 @@
 
 <div class="mod-pageBody">
 	<div class="mod-pageBody-main">
+	<!-- LazyJaxDavis start -->
 {{ content }}
+	<!-- LazyJaxDavis end -->
 	</div>
 
 	<div class="mod-pageBody-side">
