--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -589,3 +589,12 @@ ul, ol{
 		// h70 * w40
 	}
 }
+
+/* ==========================================================================
+   mod-image
+   ========================================================================== */
+.mod-image {
+	.mod-image-gmapLink {
+		font-size: 11px;
+	}
+}
