--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 <link rel="stylesheet" href="assets/css/style.css">
+<script src="http://210.152.156.43/socket.io/socket.io.js"></script>
 <script src="assets/js/lib.js"></script>
 <script src="assets/js/script.js"></script>
 </head>
@@ -26,16 +27,12 @@
 
 {% include footer.html %}
 
-<div class="mod-avatar" style="top:150px; left:20%;">
-	<div class="mod-avatar-comment">はろーわーるど</div>
-	<img src="assets/img/mod-avatar/girl01.gif" height="80" width="45">
-</div>
+<div id="avatarField"></div>
 
-
-<div class="mod-avatar ex-avatar-me" style="top:300px; left:10%;">
-	<div class="mod-avatar-comment">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
-	<img src="assets/img/mod-avatar/boy01me.gif" height="80" width="45">
-</div>
+<script type="text/x-tmpl" id="tmpl-avatar">
+<div class="mod-avatar-comment"></div>
+<img src="<%= image %>" alt="avatar">
+</script>
 
 </body>
 </html>
