--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -602,6 +602,17 @@ ul, ol{
 			}
 		}
 	}
+	&.inputMode{
+		.mod-avatar-comment{
+			-webkit-border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 stretch;
+			   -moz-border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 stretch;
+				 -o-border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 stretch;
+					border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 fill stretch;
+		}
+		textarea{
+			background: #ffc8c8;
+		}
+	}
 	img{
 		display:block;
 		margin:0 0 0 -8px;
