スピーカー情報修正

--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -302,6 +302,7 @@ ul, ol{
 	_height:130px;
 	min-height:130px;
 	padding-left:165px;
+	padding-bottom: 20px;
 	.mod-speakerInfo-header{
 		h1{
 			font-size:font-size(18,13);
