Firefoxでエラーになる件修正

--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -97,6 +97,7 @@ ul, ol{
 		a{
 			display: block;
 			width:100%;
+			outline: none;
 			@include transition(margin, .1s, linear);
 			&:hover{
 				margin-left:-6px;
