--- a/src/_includes/foreign_speaker.html
+++ b/src/_includes/foreign_speaker.html
@@ -1,4 +1,4 @@
-	<section class="mod-speakerInfo">
+	<section class="mod-speakerInfo" id="izs">
 		<a href="https://twitter.com/izs">
 			<header class="mod-speakerInfo-header">
 				<div class="mod-speakerInfo-image">
@@ -10,7 +10,7 @@
 		<p><a href="http://joyent.com/">Joyent</a>で働くエンジニアであり、<a href="http://nodejs.org/">Node.js</a>のパッケージ管理ツールである<a href="https://npmjs.org/">npm</a>などの開発者です。現在はNode.jsのオリジナルの作者である<a href="https://twitter.com/ryah">Ryan</a>からその座を受け継ぎ、二代目のゲートキーパーとしてNode.jsの開発をリードしています。かつては掃除機のセールスをやっていたという異色の経歴を持つことでも有名。</p>
 	<!-- /.mod-speakerInfo --></section>
 
-	<section class="mod-speakerInfo">
+	<section class="mod-speakerInfo" id="mikeal">
 		<a href="https://twitter.com/mikeal">
 			<header class="mod-speakerInfo-header">
 				<div class="mod-speakerInfo-image">
@@ -22,7 +22,7 @@
 		<p><a href="http://www.nodeconf.com/">NodeConf</a>の主催者であり、 Mozilla, CouchOne, Yammerと渡り、現在は<a href="https://gather.at/">Gather.at</a>というスタートアップで働く実力者です。<a href="https://npmjs.org/package/request">request</a>というモジュールを公開するように、 HTTP周りに非常に詳しく、MLでもNode.jsコアの通信周りにも鋭く切り込む場面が良くあります。非常にグルメなことでも知られており、日本食ではラーメンが好きだそうです。</p>
 	<!-- /.mod-speakerInfo --></section>
 
-	<section class="mod-speakerInfo">
+	<section class="mod-speakerInfo" id="charlie">
 		<a href="https://twitter.com/indexzero">
 			<header class="mod-speakerInfo-header">
 				<div class="mod-speakerInfo-image">
@@ -34,7 +34,7 @@
 		<p>Node.jsのPaaSを提供する<a href="http://nodejitsu.com/">NodeJitsu</a>のCEOです。プロセス管理ツール<a href="https://npmjs.org/package/forever">forever</a>、プロキシ実装の<a href="https://npmjs.org/package/http-proxy">node-http-proxy</a>、 MVCフレームワークの<a href="https://npmjs.org/package/flatiron">Flatiron</a>、Loggerモジュールの<a href="https://npmjs.org/package/winston">Winston</a>など、様々な玄人向けモジュールの開発に関わる実力派です。元はmicrosoftでエンタープライズ開発に従事していたそうです。</p>
 	<!-- /.mod-speakerInfo --></section>
 
-	<section class="mod-speakerInfo">
+	<section class="mod-speakerInfo" id="substack">
 		<a href="https://twitter.com/substack">
 			<header class="mod-speakerInfo-header">
 				<div class="mod-speakerInfo-image">
