文言修正・追加

--- a/src/_includes/foreign_speaker.html
+++ b/src/_includes/foreign_speaker.html
@@ -31,7 +31,7 @@
 				<h1>Charlie Robbins</h1>
 			</header>
 		</a>
-		<p>Node.jsのPaaSを提供する<a href="http://nodejitsu.com/">NodeJitsu</a>のCEOです。プロセス管理ツール<a href="https://npmjs.org/package/forever">forever</a>、プロキシ実装の<a href="https://npmjs.org/package/http-proxy">node-http-proxy</a>、 MVCフレームワークの<a href="https://npmjs.org/package/flatiron">Flatiron</a>、Loggerモジュールの<a href="https://npmjs.org/package/winston">Winston</a>など、様々な玄人向けモジュールの開発に関わる実力派です。元はmicrosoftでエンタープライズ開発に従事していたそうです。</p>
+		<p>Node.jsのPaaSを提供する<a href="http://nodejitsu.com/">NodeJitsu</a>のCEOです。プロセス管理ツール<a href="https://npmjs.org/package/forever">forever</a>、プロキシ実装の<a href="https://npmjs.org/package/http-proxy">node-http-proxy</a>、 MVCフレームワークの<a href="https://npmjs.org/package/flatiron">Flatiron</a>、Loggerモジュールの<a href="https://npmjs.org/package/winston">Winston</a>など、様々な玄人向けモジュールの開発に関わる実力派です。元はMicrosoftでエンタープライズ開発に従事していたそうです。</p>
 	<!-- /.mod-speakerInfo --></section>
 
 	<section class="mod-speakerInfo" id="substack">
