ソーシャルボタン追加

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -9,6 +9,43 @@
 		</div>
 	</div></div>
 	<div class="mod-pageHeader-socialButtons"><div class="mod-pageHeader-socialButtonsInner">
+		<!-- twitter -->
+		<div class="item">
+			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://nodefest.jp/2012/" data-via="nodefest" data-lang="ja" data-hashtags="nodefest">ツイート</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</div>
+
+		<!-- facebook -->
+		<div class="item">
+			<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+			  var js, fjs = d.getElementsByTagName(s)[0];
+			  if (d.getElementById(id)) return;
+			  js = d.createElement(s); js.id = id;
+			  js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
+			  fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
+			<div class="fb-like" data-href="http://nodefest.jp/2012/" data-send="false" data-layout="button_count" data-width="130" data-show-faces="false"></div>
+		</div>
+
+		<!-- B -->
+		<div class="item">
+			<a href="http://b.hatena.ne.jp/entry/http://nodefest.jp/2012/" class="hatena-bookmark-button" data-hatena-bookmark-title="Node学園祭2012" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+		</div>
+
+		<!-- G+1 -->
+		<div class="item">
+			<div class="g-plusone" data-size="medium" data-href="http://nodefest.jp/2012/"></div>
+			<script type="text/javascript">
+			  window.___gcfg = {lang: 'ja'};
+
+			  (function() {
+				var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+				po.src = 'https://apis.google.com/js/plusone.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+			  })();
+			</script>
+		</div>
 	</div></div>
 	<nav>
 		<ul>
