--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -76,8 +76,20 @@ ul, ol{
 		background: url(../img/mod-pageHeader/bg_03.png) repeat-x #e9efd6;
 	}
 	.mod-pageHeader-socialButtonsInner{
+		width: 970px;
+		margin: 0 auto;
 		min-height: 22px;
-		padding:1px 5px;
+		padding:3px 0 2px 10px;
+
+		.item {
+			height: 22px;
+			display: inline-block;
+			vertical-align: bottom;
+		}
+
+		iframe.twitter-share-button {
+			width: 105px!important;
+		}
 	}
 	nav{
 		@extend %clearfix;
